# body

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  ecosystem.config.js
.github/workflows/: ci-cd.yml
backend/: package.json
backend/src/: app.js  server.js
backend/src/controllers/: analytics.controller.js  marketplace.controller.js  privacy.controller.js
backend/src/models/: data.model.js  (+5 more)
backend/tests/: marketplace.test.js
contracts/: Anchor.toml  Cargo.toml
contracts/src/: errors.rs  lib.rs
contracts/src/data_marketplace/: data_operations.rs  data_state.rs  marketplace_operations.rs  mod.rs  provider_operations.rs
contracts/src/governance/: governance_operations.rs  governance_state.rs  mod.rs
contracts/src/token/: mod.rs  reward_operations.rs  token_operations.rs  token_state.rs
contracts/tests/: bodydfi.ts
docs/: CODE_ORGANIZATION.md  CONTRIBUTION_GUIDELINES.md
docs/hardware/: firmware_design.md  prototype_design.md  sensor_specifications.md
docs/releases/: RELEASE_NOTES.md  RELEASE_NOTES_V1.0.4.md  v1.0.5-RELEASE.md  v1.0.6-RELEASE.md
frontend/: package.json
frontend/src/: App.jsx
mobile/: package.json
mobile/src/: App.js  constants.js
nginx/conf/: default.conf
scripts/deployment/: deploy_contracts.js
smart-contracts/: Anchor.toml
src/core/: README.md  rewards.controller.js
src/shared/: README.md
src/utils/: README.md  i18n.js  logger.js
temp/: RELEASE_NOTES_V1.0.2.md  RELEASE_NOTES_V1.0.3.md  RELEASE_NOTES_V1.0.4.md
(+37 files in other folders)
