[package]
name = "bodydfi"
version = "0.1.0"
description = "Wearable device data value ecosystem on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bodydfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.50"

[dev-dependencies]
solana-sdk = "1.17.0"
solana-program-test = "1.17.0" 